# darklock-guard

./: .dockerignore  .env.example  .env.render.example  .env.xp-example  .gitignore  ARCHITECTURE_ASSESSMENT.md  BRAND_MIGRATION_REPORT.md  BRAND_MIGRATION_SUMMARY.md  CHATGPT_DISCORD_BOT_README.md  CHATGPT_GUIDE.md  COMMAND_MIGRATION_MAP.md  COMMAND_REFACTORING_GUIDE.md  COMMAND_REFACTORING_SUMMARY.md  Cargo.toml  DARKLOCK_DB_PATCHES.txt  DASHBOARD_ROUTES_MAP.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_TO_PI5.md  Dockerfile  ENDPOINT_REFERENCE.md  EVENT_HANDLER_AUDIT.md  IMPLEMENTATION_GUIDE.md  LICENSE  NOVA_TERMINAL_README.md  Open Source License  PI5_SETUP.md  PRODUCTION_FIXES_APPLIED.md  Pi5 config | pico pi2w config.md  README.md  README.new.md  RENDER_DEPLOY.md  ROOM_CONTROL_GUIDE.md  STARTUP_GUIDE.md  TECHNICAL_AUDIT.md  XP_SYSTEM_README.md  ai-terminal-server.py  ai-terminal.py  ai-terminal.py.bak  ai-terminal.py.bak2  assistant_planner.py  (+77 more)
ainti-tampering-app/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
ainti-tampering-app/tauri-app/src-tauri/src/: commands.rs  crypto.rs  error.rs  event_chain.rs  integrity.rs  lib.rs  main.rs  storage.rs
ainti-tampering-app/tauri-app/src-tauri/src/protection/: baseline.rs  commands.rs  database.rs  event_chain.rs  hasher.rs  keystore.rs  manager.rs  mod.rs  models.rs  scanner.rs  watcher.rs
backups-2026-04-10/: changelog.html.bak  index.html.bak  privacy.html.bak  terms.html.bak  website-docs.html
cloudflare-worker/: worker.js
darklock/: check-downloads.js  create-admin.js  default-admin.js  generate-ssl-cert.sh  integration.js  migrate-maintenance.js  server.js  start.js  test-security-fixes.js  test-server.js
darklock-app/: .env.example  electron.vite.config.mjs  package-lock.json  package.json  tailwind.config.mjs
data/: bot_status.json  darklock.db.backup  file-integrity.json  ranks.json  xp.db-shm  xp.db-wal
desktop/: ICON_UPDATE_INSTRUCTIONS.md  package-lock.json  package.json
docs/: CHATGPT_ACTIONS_OPENAPI.json  JARVIS_PLANNER.md  PI5_OPS.md  RIDGELINE_SECURE_UPDATES.md  SECURITY_AUDIT_PATCH_REPORT.md  UI_SPECIFICATION.md  UPDATE_PACKAGING.md
examples/: darklock-integration-example.js
file-protection/: INTEGRATION_EXAMPLE.js  README.md  index.js  package-lock.json  package.json  test-live.js  test.js
guard-v2/: .gitignore  CONTRIBUTING.md  Cargo.toml  GITHUB_SETUP_GUIDE.md  LICENSE  demo-protection.sh  init-vault.sh  ipc-client.py  quick-config.sh  reset-vault.sh  run-test.sh  setup-github.sh  setup-guard.sh  simple-ipc-test.py  start.sh  test-tamper-protection.sh  update-icons.sh
guard-v2/crates/guard-cli/: Cargo.toml
guard-v2/crates/guard-cli/src/: main.rs
guard-v2/crates/guard-core/: Cargo.toml
guard-v2/crates/guard-core/src/: backup_store.rs  crypto.rs  device_state.rs  event_log.rs  ipc.rs  ipc_client.rs  lib.rs  paths.rs  safe_mode.rs  secure_storage.rs  settings.rs  vault.rs
guard-v2/crates/guard-service/: Cargo.toml
guard-v2/crates/guard-service/src/: lib.rs  main.rs  service_state.rs  status.rs
guard-v2/crates/guard-service/src/connected/: api_client.rs  commands.rs  heartbeat.rs  mod.rs  state.rs  telemetry.rs  verifier.rs
guard-v2/crates/guard-service/src/enforcement/: mod.rs  quarantine.rs  restore.rs
guard-v2/crates/guard-service/src/engine/: mod.rs
guard-v2/crates/guard-service/src/integrity/: audit_loop.rs  mod.rs  pipeline.rs  scanner.rs  watcher.rs
guard-v2/crates/guard-service/tests/: connected_tests.rs  enforcement_tests.rs
guard-v2/crates/updater-helper/: Cargo.toml
guard-v2/crates/updater-helper/src/: install.rs  manifest.rs  util.rs  verify.rs
guard-v2/desktop/src-tauri/: Cargo.toml  tauri.conf.json
guard-v2/desktop/src-tauri/icons/: icon.icns
guard-v2/desktop/src-tauri/src/: main.rs
hardware/: README.md  apply_rfid_patch.py  arduino-bridge.service  arduino_bridge.py  install_deps.sh  install_lcd.sh  mock_gateway.js  requirements.txt  rfid-gateway.service  rfid_client.js  rfid_gateway.py  rfid_gateway_patch.py  rfid_manage.py  rfid_test.py  test_client.js
home ai/: .env.example  .gitignore  ai_interface.py  api_server.py  backup.py  command_parser.py  config.yaml  executor.py  learning.db  learning.py  log_cleaner.py  logger.py  main.py  orchestrator.py  permissions.py  requirements.txt  ssh_module.py  start.sh  voice.py  watchdog.py  weather.py  web_server.py
jarvis/: .env.example  README.md  TECHNICAL.md  config.py  config.yaml  install.sh  jarvis@.service  main.py  requirements.txt  start.sh
locale/: de.json  en.json  es.json  fr.json  index.js  pt.json
nova/: .env.example  .gitignore  README.md  main.py  requirements.txt
nova-agents/: .gitignore  README.md  main.py  requirements.txt
scripts/: daily-backup.js  darklock-bot.service  darklock-platform.service  db-backup.js  db-restore.js  deploy-to-pi5.sh  deploy.sh  dev-all.sh  generate-icons.py  install-services.sh  migrate-darklock-to-sqlite.js  pi5-deploy.sh  (+9 more)
secure-channel/apps/dl-secure-channel/src-tauri/: Cargo.toml  tauri.conf.json
secure-channel/apps/dl-secure-channel/src-tauri/src/: lib.rs  main.rs  security_check.rs  state.rs
secure-channel/apps/dl-secure-channel/src-tauri/src/commands/: auth.rs  automod.rs  channel_messages.rs  contacts.rs  groups.rs  invites.rs  messaging.rs  mod.rs  pins.rs  presence.rs  profile.rs  security.rs  servers.rs  settings.rs  tags.rs  vault.rs  voice.rs
secure-channel/crates/dl_crypto/: Cargo.toml
secure-channel/crates/dl_crypto/src/: aead.rs  error.rs  hardware_unlock.rs  hash.rs  hash_chain.rs  identity.rs  kdf.rs  lib.rs  ratchet.rs  session.rs  x3dh.rs
secure-channel/crates/dl_proto/: Cargo.toml
secure-channel/crates/dl_proto/src/: api.rs  codec.rs  envelope.rs  group.rs  lib.rs  message.rs
secure-channel/crates/dl_store/: Cargo.toml
secure-channel/crates/dl_store/migrations/: 001_initial.sql  002_x3dh_ratchet.sql  003_friend_requests.sql  004_spk_secret.sql  005_sessions_multi_peer.sql  006_pinned_dm_messages.sql  007_system_role.sql
secure-channel/crates/dl_store/src/: db.rs  error.rs  lib.rs  migrations.rs  models.rs  vault.rs
(+1847 files in other folders)
