[package]
name = "guard-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
guard-core = { path = "../guard-core" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
