[package]
name = "guard-core"
version = "0.1.0"
edition = "2021"
authors = ["Darklock Security Engineering"]
license = "MIT"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
rand = "0.8"
rand_core = "0.6"
blake3 = "1"
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
parking_lot = "0.12"
directories = "5"
keyring = "2"
tracing = "0.1"
serde_bytes = "0.11"
bytes = "1"
tempfile = "3"
async-trait = "0.1"
zstd = { version = "0.13", features = ["zstdmt"] }

[target.'cfg(unix)'.dependencies]
tokio = { version = "1", features = ["net", "rt", "macros", "io-util", "time", "sync"] }

[target.'cfg(windows)'.dependencies]
tokio = { version = "1", features = ["net", "rt", "macros", "io-util", "time", "sync"] }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security_Credentials",
    "Win32_System_Memory",
] }

[dev-dependencies]
serde_json = "1"
hex = "0.4"
tempfile = "3"
