[package]
name = "guard-service"
version = "0.1.0"
edition = "2021"
authors = ["Darklock Security Engineering"]
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "time", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
parking_lot = "0.12"
rand = "0.8"
hex = "0.4"
keyring = "2"
rpassword = "7"
async-trait = "0.1"
bytes = "1"
zeroize = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
base64 = "0.21"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"

[dependencies.guard-core]
path = "../guard-core"
