[package]
name = "darklock-guard-ui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
guard-core = { path = "../../crates/guard-core" }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
