[package]
name = "dl_crypto"
version = "0.1.0"
edition = "2021"
description = "Darklock Secure Channel - Cryptographic primitives"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
curve25519-dalek = "4"
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
blake3 = { workspace = true }
argon2 = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
