[package]
name = "dl_proto"
version = "0.1.0"
edition = "2021"
description = "Darklock Secure Channel - Protocol types and serialisation"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
dl_crypto = { path = "../dl_crypto" }
