[package]
name = "dl-secure-channel"
version = "0.1.0"
description = "Darklock Secure Channel — E2EE Messenger"
authors = ["Darklock"]
edition = "2021"

[lib]
name = "dl_secure_channel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dl-secure-channel"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
reqwest = { workspace = true }

dl_crypto  = { path = "../../../crates/dl_crypto" }
dl_proto   = { path = "../../../crates/dl_proto" }
dl_store   = { path = "../../../crates/dl_store" }

hostname = "0.4"
sqlx = { workspace = true }
x25519-dalek = { workspace = true }
rand = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
